:alembic: Try triggering from SLURM

--- a/.github/workflows/correlate.yml
+++ b/.github/workflows/correlate.yml
@@ -36,7 +36,7 @@ jobs:
         run: |
           echo "Correlating lite regression runs"
           echo "(ﾉ◕ヮ◕)ﾉ*:･ﾟ✧"
-          echo "Correlating ${{ inputs.pipeline1 }} × ${{ inputs.pipeline2 }} for ${{ inputs.repo }}"
+          echo "Correlating ${{ inputs.pipeline1 }} × ${{ inputs.pipeline2 }} for ${{ inputs.repo }}@${{ inputs.ref }}"
           # python3 reg-suite/main.py correlate --pipeline1 $GITHUB_WORKSPACE/output/default/HNU_1 --pipeline2 $GITHUB_WORKSPACE/lite/default/HNU_1--workspace $GITHUB_WORKSPACE
       # - uses: actions/upload-artifact@v3
       #   if: always()
