# This is a combination of 3 commits. # This is the 1st commit message:
:construction_worker: Set check status

# The commit message #2 will be skipped:

# fixup! :construction_worker: Set check status

# The commit message #3 will be skipped:

# fixup! fixup! :construction_worker: Set check status

--- a/.github/workflows/run_failed.yml
+++ b/.github/workflows/run_failed.yml
@@ -1,4 +1,4 @@
-name: Correlate Regression Test
+name: Test run failed
 
 on:
   workflow_dispatch:
@@ -26,13 +26,6 @@ on:
         type: environment
         required: false
         default: ACCESS
-      pipeline1:
-        type: string
-        required: true
-      pipeline2:
-        type: string
-        required: true
-
 
 jobs:
   correlate:
@@ -50,15 +43,4 @@ jobs:
           owner: ${{ inputs.owner }}
           repository: ${{ inputs.repo }}
           sha: ${{ inputs.ref }}
-          state: success
-      - name: Correlating
-        run: |
-          echo "Correlating lite regression runs"
-          echo "(ﾉ◕ヮ◕)ﾉ*:･ﾟ✧"
-          echo "Correlating ${{ inputs.pipeline1 }} × ${{ inputs.pipeline2 }} for ${{ inputs.owner}}/${{ inputs.repo }}@${{ inputs.ref }}"
-          # python3 reg-suite/main.py correlate --pipeline1 $GITHUB_WORKSPACE/output/default/HNU_1 --pipeline2 $GITHUB_WORKSPACE/lite/default/HNU_1--workspace $GITHUB_WORKSPACE
-      # - uses: actions/upload-artifact@v3
-      #   if: always()
-      #   with:
-      #     name: logs
-      #     path: output/*/*/log/
+          state: failure
