--- a/.github/workflows/run_failed.yml
+++ b/.github/workflows/run_failed.yml
@@ -37,7 +37,7 @@ jobs:
       - name: Finalize run check
         uses: guibranco/github-status-action-v2@v1.1.7
         with:
-          authToken: ${{ secrets.GITHUB_TOKEN }}
+          authToken: ${{ inputs.GITHUB_TOKEN }}
           context: Run regression test lite
           description: ${{ inputs.log }}
           owner: ${{ inputs.owner }}
