:necktie: Don't require log

--- a/.github/workflows/correlate.yml
+++ b/.github/workflows/correlate.yml
@@ -6,7 +6,7 @@ on:
       log:
         description: run log
         type: string
-        required: true
+        required: false
       ref:
         description: 'branch, tag, or SHA'
         type: string
