--- a/.github/workflows/correlate.yml
+++ b/.github/workflows/correlate.yml
@@ -44,7 +44,7 @@ jobs:
       - name: Finalize run check
         uses: guibranco/github-status-action-v2@v1.1.7
         with:
-          authToken: ${{ secrets.GITHUB_TOKEN }}
+          authToken: ${{ secrets.GH_PAT }}
           context: Run regression test lite
           description: ${{ inputs.log }}
           owner: ${{ inputs.owner }}
