--- a/.github/workflows/correlate.yml
+++ b/.github/workflows/correlate.yml
@@ -36,6 +36,12 @@ on:
       pipeline2:
         type: string
         required: true
+      preconfig:
+        type: string
+        required: true
+      data_source:
+        type: string
+        required: true
 
 
 jobs:
@@ -49,7 +55,7 @@ jobs:
         uses: guibranco/github-status-action-v2@v1.1.7
         with:
           authToken: ${{ secrets.GH_PAT }}
-          context: Run regression test lite
+          context: lite run ${{ inputs.preconfig }} ${{ inputs.data_source }}
           description: ${{ inputs.log_output }}\n${{ inputs.log_error }}
           owner: ${{ inputs.owner }}
           repository: ${{ inputs.repo }}
