--- a/.github/workflows/launch_status.yml
+++ b/.github/workflows/launch_status.yml
@@ -1,4 +1,4 @@
-name: Test run failed
+name: Run launch status update
 
 on:
   workflow_dispatch:
@@ -12,30 +12,31 @@ on:
         type: string
         required: false
       ref:
-        description: 'branch, tag, or SHA'
+        description: branch, tag, or SHA
         type: string
         required: true
       owner:
-        description: 'owner on GitHub'
+        description: owner on GitHub
         type: string
         required: false
-        default: "FCP-INDI"
+        default: FCP-INDI
       repo:
-        description: 'repository on GitHub'
+        description: repository on GitHub
         type: string
         required: false
-        default: "C-PAC"
+        default: C-PAC
       environment:
-        description: 'Environment in which to run correlations'
+        description: Environment in which to run correlations
         type: environment
         required: false
         default: ACCESS
-      preconfig:
-        type: string
-        required: true
-      data_source:
-        type: string
-        required: true
+      status:
+        type: choice
+        options:
+          - success
+          - failure
+          - pending
+
 
 jobs:
   correlate:
@@ -48,9 +49,9 @@ jobs:
         uses: guibranco/github-status-action-v2@v1.1.7
         with:
           authToken: ${{ secrets.GH_PAT }}
-          context: lite run ${{ inputs.preconfig }} ${{ inputs.data_source }}
+          context: Run regression test lite
           description: ${{ inputs.log_error }}\n${{ inputs.log_output }}
           owner: ${{ inputs.owner }}
           repository: ${{ inputs.repo }}
           sha: ${{ inputs.ref }}
-          state: failure
+          state: ${{ inputs.status }}
