--- a/.github/workflows/run_failed.yml
+++ b/.github/workflows/run_failed.yml
@@ -51,7 +51,9 @@ jobs:
         with:
           authToken: ${{ secrets.GH_PAT }}
           context: lite run ${{ inputs.preconfig }} ${{ inputs.data_source }}
-          description: ${{ inputs.log_error }}\n${{ inputs.log_output }}
+          description: |
+            ${{ inputs.log_error }}
+            ${{ inputs.log_output }}
           owner: ${{ inputs.owner }}
           repository: ${{ inputs.repo }}
           sha: ${{ inputs.ref }}
