--- a/.github/workflows/launch_status.yml
+++ b/.github/workflows/launch_status.yml
@@ -56,7 +56,8 @@ jobs:
           path: "*.log"
       - name: Get link to download logs
         run: |
-          echo "LOG_URL=$(curl -H \"Authorization: Bearer ${{ secrets.GH_PAT }} \" -s https://api.github.com/repos/${GITHUB_REPOSITORY}/actions/artifacts | jq '[.artifacts[] | {name : .name, archive_download_url : .archive_download_url}]' | jq -r '.[] | select (.name == "launch-logs") | .archive_download_url')" >> "$GITHUB_ENV"
+          curl -H "Authorization: Bearer ${{ secrets.GH_PAT }} " -s https://api.github.com/repos/${GITHUB_REPOSITORY}/actions/artifacts | jq '[.artifacts[] | {name : .name, archive_download_url : .archive_download_url}]' | jq -r '.[] | select (.name == "launch-logs") | .archive_download_url') > url.txt
+          echo "LOG_URL=$(cat url.txt)" >> "$GITHUB_ENV"
       - name: Finalize run check
         uses: guibranco/github-status-action-v2@v1.1.7
         with:
