--- a/.github/workflows/launch_status.yml
+++ b/.github/workflows/launch_status.yml
@@ -54,10 +54,6 @@ jobs:
         with:
           name: launch-logs
           path: "*.log"
-      - name: Get link to download logs
-        run: |
-          curl -H "Authorization: Bearer ${{ secrets.GH_PAT }}" -s https://api.github.com/repos/${GITHUB_REPOSITORY}/actions/artifacts | jq '[.artifacts[] | {name : .name, archive_download_url : .archive_download_url}]' | jq -r '.[] | select (.name == "launch-logs") | .archive_download_url' > url.txt
-          echo "LOG_URL=$(tail -n 1 url.txt)" >> "$GITHUB_ENV"
       - name: Finalize run check
         uses: guibranco/github-status-action-v2@v1.1.7
         with:
@@ -67,4 +63,4 @@ jobs:
           repository: ${{ inputs.repo }}
           sha: ${{ inputs.ref }}
           state: ${{ inputs.status }}
-          target_url: ${{ env.LOG_URL }}
+          target_url: https://github.com/${GITHUB_REPOSITORY}/actions/runs/${{ github.run_id }}#artifacts
