--- a/.github/workflows/run_failed.yml
+++ b/.github/workflows/run_failed.yml
@@ -46,6 +46,15 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v3.5.3
+      - name: Load logs
+        run: |
+          printf "${{ inputs.log_output }}" > "SLURM-${{ inputs.preconfig }}-${{ inputs.data_source }}.out"
+          printf "${{ inputs.log_error }}" > "SLURM-${{ inputs.preconfig }}-${{ inputs.data_source }}.err"
+      - name: Store run logs
+        uses: actions/upload-artifact@v3.1.2
+        with:
+          name: lite-run-${{ inputs.preconfig }}-${{ inputs.data_source }}-logs
+          path: "SLURM-${{ inputs.preconfig }}-${{ inputs.data_source }}.*"
       - name: Finalize run check
         uses: guibranco/github-status-action-v2@v1.1.7
         with:
@@ -58,3 +67,4 @@ jobs:
           repository: ${{ inputs.repo }}
           sha: ${{ inputs.ref }}
           state: failure
+          target_url: https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}#artifacts
