--- a/.github/workflows/launch_status.yml
+++ b/.github/workflows/launch_status.yml
@@ -47,8 +47,8 @@ jobs:
         uses: actions/checkout@v3.5.3
       - name: Load logs
         run: |
-          printf "${{ inputs.log_output }}" > "out.log"
-          printf "${{ inputs.log_error }}" > "err.log"
+           base64 -d "${{ inputs.log_output }}" > "out.log"
+           base64 -d "${{ inputs.log_error }}" > "err.log"
       - name: Store launch logs
         uses: actions/upload-artifact@v3.1.2
         with:
