--- a/.github/workflows/run_failed.yml
+++ b/.github/workflows/run_failed.yml
@@ -4,14 +4,6 @@ run-name: ${{ inputs.preconfig }} ${{ inputs.data_source }} run failed on ${{ in
 on:
   workflow_dispatch:
     inputs:
-      log_error:
-        description: run log (STDERR)
-        type: string
-        required: false
-      log_output:
-        description: run log (STDOUT)
-        type: string
-        required: false
       ref:
         description: 'branch, tag, or SHA'
         type: string
@@ -46,25 +38,14 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v3.5.3
-      - name: Load logs
-        run: |
-           base64 -d "${{ inputs.log_output }}" > "SLURM-${{ inputs.preconfig }}-${{ inputs.data_source }}.out"
-           base64 -d "${{ inputs.log_error }}" > "SLURM-${{ inputs.preconfig }}-${{ inputs.data_source }}.err"
-      - name: Store run logs
-        uses: actions/upload-artifact@v3.1.2
-        with:
-          name: lite-run-${{ inputs.preconfig }}-${{ inputs.data_source }}-logs
-          path: "SLURM-${{ inputs.preconfig }}-${{ inputs.data_source }}.*"
       - name: Finalize run check
         uses: guibranco/github-status-action-v2@v1.1.7
         with:
           authToken: ${{ secrets.GH_PAT }}
           context: lite run ${{ inputs.preconfig }} ${{ inputs.data_source }}
-          description: |
-            ${{ inputs.log_error }}
-            ${{ inputs.log_output }}
+          # description: |
           owner: ${{ inputs.owner }}
           repository: ${{ inputs.repo }}
           sha: ${{ inputs.ref }}
           state: failure
-          target_url: https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}#artifacts
+          # target_url: https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}#artifacts
