--- a/.github/workflows/launch_status.yml
+++ b/.github/workflows/launch_status.yml
@@ -3,14 +3,6 @@ name: Run launch status update
 on:
   workflow_dispatch:
     inputs:
-      log_error:
-        description: run log (STDERR)
-        type: string
-        required: false
-      log_output:
-        description: run log (STDOUT)
-        type: string
-        required: false
       ref:
         description: branch, tag, or SHA
         type: string
@@ -45,15 +37,6 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v3.5.3
-      - name: Load logs
-        run: |
-           base64 -d "${{ inputs.log_output }}" > "out.log"
-           base64 -d "${{ inputs.log_error }}" > "err.log"
-      - name: Store launch logs
-        uses: actions/upload-artifact@v3.1.2
-        with:
-          name: launch-logs
-          path: "*.log"
       - name: Finalize run check
         uses: guibranco/github-status-action-v2@v1.1.7
         with:
@@ -63,4 +46,4 @@ jobs:
           repository: ${{ inputs.repo }}
           sha: ${{ inputs.ref }}
           state: ${{ inputs.status }}
-          target_url: https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}#artifacts
+          # target_url: https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}#artifacts
