--- a/.github/workflows/launch_status.yml
+++ b/.github/workflows/launch_status.yml
@@ -41,7 +41,7 @@ jobs:
         uses: guibranco/github-status-action-v2@v1.1.7
         with:
           authToken: ${{ secrets.GH_PAT }}
-          context: Run regression test lite
+          context: Launch lite regression test
           owner: ${{ inputs.owner }}
           repository: ${{ inputs.repo }}
           sha: ${{ inputs.ref }}
