--- a/.github/workflows/run_failed.yml
+++ b/.github/workflows/run_failed.yml
@@ -49,3 +49,4 @@ jobs:
           sha: ${{ inputs.ref }}
           state: failure
           # target_url: https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}#artifacts
+          target_url: https://github.com/${{ inputs.owner }}/regtest-runlogs/tree/${{ inputs.repo}}_${{ inputs.ref }}/slurm-${{ inputs.preconfig }}-${{ inputs.data_source }}
