--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,6 +1,11 @@
 fail_fast: false
 
 repos:
+- repo: https://github.com/python-poetry/poetry
+  rev: 1.7.1
+  hooks:
+  - id: poetry-check
+
 - repo: https://github.com/astral-sh/ruff-pre-commit
   rev: v0.1.8
   hooks:
