--- a/.github/workflows/correlate.yml
+++ b/.github/workflows/correlate.yml
@@ -40,13 +40,16 @@ jobs:
   correlate:
     runs-on: ubuntu-latest
     environment: ${{ inputs.environment}}
+    env:
+      COMPARISON_PATH: ${{ secrets.COMPARISON_PATH }}
+      GH_PAT: ${{ secrets.GH_PAT }}
     steps:
       - name: Checkout code
         uses: actions/checkout@v3.5.3
       - name: Finalize run check
         uses: guibranco/github-status-action-v2@v1.1.7
         with:
-          authToken: ${{ secrets.GH_PAT }}
+          authToken: ${{ env.GH_PAT }}
           context: lite run ${{ inputs.preconfig }} ${{ inputs.data_source }}
           owner: ${{ inputs.owner }}
           repository: ${{ inputs.repo }}
@@ -54,11 +57,29 @@ jobs:
           state: success
           target_url: https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}#artifacts
       - name: Correlating
-        run: |
-          echo "Correlating lite regression runs"
-          echo "(ﾉ◕ヮ◕)ﾉ*:･ﾟ✧"
-          echo "Correlating ${{ inputs.pipeline1 }} × ${{ inputs.pipeline2 }} for ${{ inputs.owner}}/${{ inputs.repo }}@${{ inputs.ref }}"
-          # 
+        uses: appleboy/ssh-action@v1.0.0
+        with:
+          host: ${{ secrets.SSH_HOST }}
+          username: ${{ secrets.SSH_USER }}
+          key: ${{ secrets.SSH_PRIVATE_KEY }}
+          command_timeout: 200m
+          script: |
+            cd ${{ secrets.SSH_WORK_DIR }}
+            if [ ! -d reg-suite ] ; then
+                git clone https://github.com/${{ env.DASHBOARD_REPO }} reg-suite
+            else
+                cd reg-suite
+                git pull origin main
+                cd ..
+            fi
+            mkdir -p ${{ secrets.SSH_WORK_DIR }}/regtest_lite/${{ github.sha }}/correlations
+            sbatch --export="HOME_DIR=${{ secrets.SSH_WORK_DIR }},IMAGE=${{ env.DOCKER_TAG }},OWNER=${{ github.repository_owner }},PATH_EXTRA=${{ secrets.GH_CLI_BIN_PATH }},REPO=$(echo ${{ github.repository }} | cut -d '/' -f 2),SHA=${{ github.sha }}" --output=${{ secrets.SSH_WORK_DIR }}/regtest_lite/${{ github.sha }}/logs/out.log --error=${{ secrets.SSH_WORK_DIR }}/regtest_lite/logs/${{ github.sha }}/error.log slurm_testing/.github/scripts/launch_regtest_lite.SLURM
+
+        # run: |
+        #   echo "Correlating lite regression runs"
+        #   echo "(ﾉ◕ヮ◕)ﾉ*:･ﾟ✧"
+        #   echo "Correlating ${{ inputs.pipeline1 }} × ${{ inputs.pipeline2 }} for ${{ inputs.owner}}/${{ inputs.repo }}@${{ inputs.ref }}"
+        #   # 
       # - uses: actions/upload-artifact@v3
       #   if: always()
       #   with:
