--- a/cpac_slurm_testing/pipeline_configs/benchmark-FNIRT_seed.yaml
+++ b/cpac_slurm_testing/pipeline_configs/benchmark-FNIRT_seed.yaml
@@ -4,15 +4,15 @@
 # http://fcp-indi.github.io for more info.
 #
 # Tip: This file can be edited manually with a text editor for quick modifications.
-FROM: monkey
+FROM: benchmark-FNIRT
 pipeline_setup:
-  pipeline_name: monkey-seed
-  output_directory: 
+  pipeline_name: benchmark-FNIRT-seed
+  output_directory:
     path: /output/output
-  working_directory: 
+  working_directory:
     path: /output/working
     remove_working_dir: Off
-  log_directory: 
+  log_directory:
     path: /output/log
   system_config:
 
